--- a/web/themes/oc_patterns/components/_patterns/01-atoms/06-forms/08-views-exposed-filters/_views_exposed_filters.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/06-forms/08-views-exposed-filters/_views_exposed_filters.scss
@@ -14,6 +14,9 @@
 		}
 		.select2-container--default{
 			max-width: 100%;
+			.select2-selection__choice{
+				margin-top: 4px;
+			}
 		}
 	}
 	.form-actions{
@@ -23,9 +26,14 @@
 		}
 		input.form-submit.button{
 			@include submitButton;
-			margin: 0px 10px;
+			@include smallTab{
+				margin: 0px 10px;
+			}
 			&#edit-reset{
 				@include resetButton;
+				@include smallTab{
+					margin: 10px 0px;
+				}
 			}
 		}
 	}
