Small angle fix for superfish accordion fontAwesome

--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-superfish/_superfish.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-superfish/_superfish.scss
@@ -244,7 +244,7 @@ ul.sf-menu.sf-accordion{
 		}//end menupareny
 		&.sf-expanded > .sf-accordion-button{
 			&:after{
-				content: '\f106';
+				@include faSolid($fa-var-angle-left,30px);
 			}
 		}
 	}//end li
