add views block classes

--- a/web/themes/oc_patterns/templates/zzz-custom/blocks/block.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/blocks/block.html.twig
@@ -26,7 +26,11 @@
  */
 #}
 {% if plugin_id %}
-  {% set pluginClass = 'block-' ~ plugin_id|clean_class %}
+  {% if 'views_block' in plugin_id  %}
+    {% set pluginClass = 'views-block block-' ~ content['#name']|clean_class ~ ' block-' ~ content['#display_id']|clean_class%}
+  {% else %}
+    {% set pluginClass = 'block-' ~ plugin_id|clean_class %}
+  {% endif %}
 {% endif %}
 {% if content['#block_content'].bundle %}
   {% set bundleClass = 'block-' ~ content['#block_content'].bundle|clean_class %}
