Change layout sections to use all variable construction, add two-column sidebar right

--- a/web/themes/oc_patterns/components/_patterns/00-base/_00-breakpoints.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/_00-breakpoints.scss
@@ -28,6 +28,11 @@ $spaceXl: 6rem;
 $siteMarginMobile: 2rem;
 $siteMarginDesk: 6rem;
 
+/* LAYOUT VARIABLES
+-------------------- */
+$elementSpace: 4rem;
+$sideBar: 320px;
+$sectionGutter: 60px;
 
 /// mixin - smallTab
 @mixin smallTab {
