Worked on combining the slideshow and lightbox gallery widgets

--- a/web/modules/custom/oc_custom/css/custom-node.css
+++ b/web/modules/custom/oc_custom/css/custom-node.css
@@ -21,7 +21,7 @@
 
 }
 
-/* paragraph add buttons 
+/* paragraph add buttons
 ------------------------- */
 .field--widget-paragraphs:after{
   content: '';
@@ -93,6 +93,10 @@
   background: url(../icons/library.svg) no-repeat;
 }
 
+.field--widget-paragraphs .paragraphs-tabs-wrapper input[value="Add Gallery"]{
+  background: url(../icons/gallery.svg) no-repeat;
+}
+
 .field--widget-paragraphs .paragraphs-tabs-wrapper input[value="Add Horizontal Rule"]{
   background: url(../icons/hr.svg) no-repeat;
 }
@@ -109,10 +113,6 @@
   background: url(../icons/link.svg) no-repeat;
 }
 
-.field--widget-paragraphs .paragraphs-tabs-wrapper input[value="Add Lightbox Gallery"]{
-  background: url(../icons/gallery.svg) no-repeat;
-}
-
 .field--widget-paragraphs .paragraphs-tabs-wrapper input[value="Add Map"]{
   background: url(../icons/map.svg) no-repeat;
 }
@@ -123,10 +123,6 @@
 
 .field--widget-paragraphs .paragraphs-tabs-wrapper input[value="Add Pullquote"]{
   background: url(../icons/pullquote.svg) no-repeat;
-}
-
-.field--widget-paragraphs .paragraphs-tabs-wrapper input[value="Add Slideshow"]{
-  background: url(../icons/slider.svg) no-repeat;
 }
 
 .field--widget-paragraphs .paragraphs-tabs-wrapper input[value="Add Text"]{
@@ -179,7 +175,7 @@
   color: #ec2f10;
 }
 
- 
+
 /* GENERAL */
 .fieldset-wrapper .fieldset-description{
   margin-bottom: 1em;
@@ -190,7 +186,3 @@
 .field--widget-paragraphs .field--name-field-oc-form .js-form-type-select + .js-form-wrapper{
   display: none;
 }
-
-
- 
- 
