--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/gallery/paragraph--gallery.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/gallery/paragraph--gallery.html.twig
@@ -48,28 +48,26 @@
         }
     %}
 
-    {% block lightboxContent %}
-        {{ attach_library('oc_patterns/featherlight') }}
-        {%- for key, item in content.field_oc_image_multi if key|first != '#' -%}
-            {%- if paragraph.field_oc_image_multi[key].target_id > 0 -%}
-                <div class="featherlight-gal image-gal" href="#item{{paragraph.field_oc_image_multi[key].target_id}}" rel="gallery-{{paragraph.id.value}}">{{ drupal_entity('media', paragraph.field_oc_image_multi[key].target_id, 'large_thumb') }}
-                    <div class="featherlight-hidden" id="item{{paragraph.field_oc_image_multi[key].target_id}}">{{ drupal_entity('media', paragraph.field_oc_image_multi[key].target_id, 'large') }}</div>
-                </div>
-            {%- endif -%}
-        {%- endfor -%}
-    {% endblock %}
+        {% block lightboxContent %}
+            {{ attach_library('oc_patterns/featherlight') }}
+            {%- for key, item in content.field_oc_image_multi if key|first != '#' -%}
+                {%- if paragraph.field_oc_image_multi[key].target_id > 0 -%}
+                    <div class="featherlight-gal image-gal" href="#item{{paragraph.field_oc_image_multi[key].target_id}}" rel="gallery-{{paragraph.id.value}}">
+                        {{ drupal_entity('media', paragraph.field_oc_image_multi[key].target_id, 'large_thumb') }}
+                        <div class="featherlight-hidden" id="item{{paragraph.field_oc_image_multi[key].target_id}}">
+                            {{ drupal_entity('media', paragraph.field_oc_image_multi[key].target_id, 'large') }}
+                        </div>
+                    </div>
+                {%- endif -%}
+            {%- endfor -%}
+        {% endblock %}
 
-    {% block sliderContent %}
-        {{ attach_library('oc_patterns/slick') }} test paragraph template
-    	{{- content.field_oc_image_multi.0 -}}
-
-        <div class="paragraph paragraph--type--slideshow">
-            {% for image in images %}
-                <div class="slick-slider">{{ image.src }}</div>
-            {% endfor %}
-        </div>
-
-    {% endblock %}
+        {% block sliderContent %}
+            {{ attach_library('oc_patterns/slick') }}
+            <div class="paragraph paragraph--type--slideshow">
+        	   {{- content.field_oc_image_multi -}}
+            </div>
+        {% endblock %}
 
     {% endembed %}
 {% endblock %}
