Add colors components file, macros for header and block layout hot config

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
@@ -11,12 +11,12 @@
 
 {#######  NAVIGATION VARIABLES  #######}
 <div class="macro-tile">
-<p><strong>Spotlight Main nav</strong></br>
-	VARIABLES= default, spotlight</br>
-	Current= spotlight
+<p><strong>Main nav alignment & Background</strong></br>
+	VARIABLES= left, right, center, inline, background</br>
+	Current= right
 </p>
 </div>
-{% macro mainNavStyle() %}spotlight{% endmacro %}
+{% macro mainNavStyle() %}center background{% endmacro %}
 
 
 {#######  SEARCH VARIABLES  #######}
