--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-superfish/00-superfish.twig
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-superfish/00-superfish.twig
@@ -3,11 +3,12 @@
 #}
 
 {% block superhide_start %}
+{% import "@base/global/05-macros/macros.twig" as styles %}
 <div class="pl notes">Superfish desktop main level link and dropdown. Theming example only.</div>
 <div class="flex-holder">
 	<div class="flex-half sf-desk">
 	<div class="pl notes">Main Level (with header background color)</div>
-		<div class="pl faux-header">
+		<div class="pl {{ styles.mainNavStyle }}">
 {% endblock %}
 			{% block superfish_main %}
 				{% block superfish_content %}
