--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
@@ -47,12 +47,12 @@
 {#
 	DRUPAL: This template is being embedded into multiple Drupal templates. Macros variables can also alter the footer theming/behavior. Avaiable variables: fixed, non-fixed.
 #}
-
+{% import "@base/global/05-macros/macros.twig" as styles %}
 
 <div class="layout-container">
 
 	{% block pageHeader %}
-		<header role="banner">
+		<header role="banner" class="nav-{{ styles.mainNavStyle }}">
 			<a href="#main-navigation" class="visually-hidden focusable">
 				{{ 'Skip to main navigation'|t }}
 			</a>
