NASA Control changes

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_component-color-vars.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/_component-color-vars.scss
@@ -20,11 +20,11 @@ $hoverLink   : $midGrey;
 ---------------------- */
 //no background or light background
 $sfTopLink:       $black;
-$sfTopBackHover:  $white;
+$sfTopBackHover:  $lightGrey;
 $sfTopActive:      $link;
 $sfChildLink:     $link;
 $sfChildActive:    $black;
-$sfDropdown:       $white;
+$sfDropdown:       $lightGrey;
 
 //dark background
 $navBack:            $midGrey;
