--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_page.twig
@@ -111,7 +111,7 @@
 
 	{% block pageFooter %}
 		{% if page.footer %}
-			<footer role="contentinfo">
+			<footer role="contentinfo" class="{{ styles.footer }} {{ styles.newsletterDisplay }}">
 				<div class="footer-inner">
 					{{ page.footer }}
 				</div>
