--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/search-block/search-block.twig
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/search-block/search-block.twig
@@ -18,8 +18,8 @@
 
 		{% block searchForm %}
 			<div class="search-form-outer">
-				<div class="t-search-wrapper"><a href="#" class="t-search" role="button" aria-label="toggle-search"><i class="fa fa-search" aria-hidden="true"></i></a></div>
-				<div class="t-search-close"><a href="#" class="close-search" role="button" aria-label="toggle-search-close">X</a><span class="close-text">close</span></div>
+				<div class="t-search-wrapper"><a href="#" class="t-search" role="button" aria-label="toggle-search"><i class="fas fa-search"></i></a></div>
+				<div class="t-search-close"><a href="#" class="close-search" role="button" aria-label="toggle-search-close"><i class="fas fa-times"></i></a><span class="close-text">close</span></div>
 				<div class="search-form-wrapper" aria-expanded="false">
 					<form action="/site-search" method="get" id="views-exposed-form-site-search-search-results" accept-charset="UTF-8" data-drupal-form-fields="edit-search-api-fulltext">
 
@@ -30,7 +30,7 @@
 							</div>
 							<div data-drupal-selector="edit-actions" id="edit-site-search-actions" class="form-actions js-form-wrapper form-wrapper">
 								<input id="edit-submit-site-search" class="button js-form-submit form-submit" data-drupal-selector="edit-submit-site-search" value="search" type="submit">
-								<i class="fa fa-search" aria-hidden="true"></i>
+								<i class="fas fa-search"></i>
 							</div>
 						{% endblock %}
 
