--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/basic-page/_basic-page.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/basic-page/_basic-page.scss
@@ -10,4 +10,10 @@
 		@include centerTitle;
 	}
 
+	.block-body{
+		padding-left: 0;
+		padding-right: 0;
+		max-width: 100%;
+	}
+
 }//end basic page
