--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_global-styles.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/_global-styles.scss
@@ -214,3 +214,59 @@ body {
 		}
 	}// end tabs
 }//end local tasks
+
+/* MODALS
+----------------- */
+.modal-element{
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	z-index: 500;
+	background: $transBlack;
+	.modal-inner{
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 90vw;
+		max-width: 640px;
+		height: auto;
+		max-height: 800px;
+		@include translate(-50%,-50%);
+		background: $white;
+		& > .contextual .trigger{
+			right: -12px;
+		}
+	}
+	.modal-header{
+		position: relative;
+		h2{
+			padding: 1.5rem 2rem;
+			background: $offWhite;
+			@include heading4;
+			color: $black;
+		}//end block title
+		.modal-close{
+			color: $black;
+			font-size: 28px;
+			position: absolute;
+			top: 1rem;
+			right: 2rem;
+			&:hover,&:focus{
+				opacity: .6;
+			}
+		}
+	}//end modal-header
+	.modal-content{
+		display: none;
+		overflow-y: scroll;
+		padding: 2rem 2rem 4rem;
+		overflow-x: hidden;
+		input:focus{
+			cursor: pointer;
+		}
+	}
+}//end modal-element
+
