Variable sidebar macros setup

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
@@ -26,7 +26,7 @@
 	Current= toggle
 </p>
 </div>
-{% macro searchBox() %}box{% endmacro %}
+{% macro searchBox() %}toggle{% endmacro %}
 
 
 {#######  FORM VARIABLES  #######}
@@ -50,7 +50,7 @@
 <div class="macro-tile">
 <p><strong>Sidebar Position</strong></br>
 	VARIABLES= side-left, side-right</br>
-	Current= side-right
+	Current= side-right			
 </p>
 </div>
 {% macro sidebar() %}side-right{% endmacro %}
