--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/_accordion.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/accordion/_accordion.scss
@@ -5,6 +5,9 @@
 .paragraph--type--accordion-group{
 	max-width: $textMax;
 	@include auto;
+	.layout:not(.layout--onecol) &{
+		max-width: 100%;
+	}
 }
 
 
