--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/basic-page/_basic-page.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/basic-page/_basic-page.scss
@@ -16,4 +16,11 @@
 		max-width: 100%;
 	}
 
+	.layout:not(.layout--onecol){
+		.section .field-section-widgets{
+			padding-left: 0;
+			padding-right: 0;
+		}
+	}
+
 }//end basic page
