--- a/web/themes/oc_patterns/templates/zzz-custom/layout/node.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/layout/node.html.twig
@@ -103,7 +103,7 @@
     {%- if content._layout_builder -%}
       {%- for layoutSection in content._layout_builder -%}
         {% block layoutSectionContent %}
-          <section id="section-{{ loop.index }}" class="node-section" role="region">
+          <section id="section-{{ loop.index }}" class="node-section">
             {{- layoutSection -}}
           </section>
         {% endblock %}
