--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-superfish/00-superfish.twig
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-superfish/00-superfish.twig
@@ -36,7 +36,7 @@
 	<div class="flex-half sf-dropdown">
 		<div class="pl notes">Dropdown</div>
 		<ul id="#superfish-main" class="sf-menu sf-main sf-horizontal">
-			<li class="sf-depth-1 menuparent">
+			<li class="sf-depth-1 menuparent sfHover">
 				<a href="#" class="sf-depth-1 menuparent active-trail">Main Link</a>
 				<ul>
 					<li class="sf-depth-2 sf-no-children">
